--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="d-flex bg-danger">
     <h1>Hello world</h1>
     <p>Hii there</p>
+    <i class="fa-brands fa-instagram"></i>
 </div>
 </body>
 </html>
