--- a/work.html
+++ b/work.html
@@ -29,25 +29,35 @@
     />
     <link rel="stylesheet" href="style/portfolio.css" />
   </head>
-
   <body>
     <div class="content-container container">
-      <div class="row">
-        <div class="col-lg-5">
-          <div class="content">
-            <h1 class="mb-4">Hi I am Maja Zemanová</h1>
-            <h2 class="mb-4">Frontend Developer, based in Czechia</h2>
-            <p class="mb-5">
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus
-            </p>
-            <a href="" class="btn btn-branding">Check my projects</a>
+      <div class="content">
+        <h1 class="mb-5">Stuff I've been working on</h1>
+        <div class="row">
+          <div class="col-md-6 mb-4">
+            <img src="images/yogurt.png" class="img-fluid" alt="" />
+            <h3 class="text-center">Yogurt project</h3>
+            <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>
-        </div>
-        <div class="col-lg-6">
-          <img src="images/patricia.png" alt="" class="img-fluid" />
+          <div class="col-md-6 mb-4">
+            <img src="images/weather.png" class="img-fluid" alt="" />
+            <h3 class="text-center">Weather project</h3>
+            <p class="text-center text-muted">Built with HTML, CSS and JS</p>
+          </div>
+          <div class="col-md-6 mb-4">
+            <img src="images/dictionary.png" class="img-fluid" alt="" />
+            <h3 class="text-center">Dictionary project</h3>
+            <p class="text-center text-muted">
+              Built with HTML, CSS with React
+            </p>
+          </div>
+          <div class="col-md-6 mb-4">
+            <img src="images/translator.png" class="img-fluid" alt="" />
+            <h3 class="text-center">Translator project</h3>
+            <p class="text-center text-muted">
+              Built with HTML, CSS with React
+            </p>
+          </div>
         </div>
       </div>
     </div>
