Added realistic information

--- a/index.html
+++ b/index.html
@@ -42,16 +42,14 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/yogurt.png" class="img-fluid" alt="" />
+          <img src="images/rexes.png" class="img-fluid rounded-3" alt="" />
         </div>
         <div class="col">
           <div class="project-desc">
-            <h2 class="mb-5">Yogurt project</h2>
+            <h2 class="mb-5">Cat breeds</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              My first project ever, featuring my favorite type of cat breeds -
+              rexes.
             </p>
             <a href="" class="btn btn-branding-outline">Learn more</a>
           </div>
@@ -62,10 +60,7 @@
           <div class="project-desc">
             <h2 class="mb-5">Weather app</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              First time using API and JavaScript - resulting in weather app
             </p>
             <a href="" class="btn btn-branding-outline">Learn more</a>
           </div>
@@ -81,12 +76,7 @@
         <div class="col">
           <div class="project-desc">
             <h2 class="mb-5">Dictionary app</h2>
-            <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
-            </p>
+            <p class="mb-5 text-muted">To be added!</p>
             <a href="" class="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
