--- a/about.html
+++ b/about.html
@@ -37,17 +37,11 @@
           <div class="content">
             <h1 class="mb-4">Hi I am Maja Zemanová</h1>
             <h2 class="mb-4">Frontend Developer, based in Czechia</h2>
-            <p class="mb-5">
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus
-            </p>
             <a href="" class="btn btn-branding">Check my projects</a>
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="images/patricia.png" alt="" class="img-fluid" />
+          <img src="images/maja.jpg" alt="" class="img-fluid rounded" />
         </div>
       </div>
     </div>
