--- a/work.html
+++ b/work.html
@@ -35,8 +35,8 @@
         <h1 class="mb-5">Stuff I've been working on</h1>
         <div class="row">
           <div class="col-md-6 mb-4">
-            <img src="images/yogurt.png" class="img-fluid" alt="" />
-            <h3 class="text-center">Yogurt project</h3>
+            <img src="images/rexes.png" class="img-fluid" alt="" />
+            <h3 class="text-center">Cat breeds project</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>
           <div class="col-md-6 mb-4">
@@ -47,16 +47,12 @@
           <div class="col-md-6 mb-4">
             <img src="images/dictionary.png" class="img-fluid" alt="" />
             <h3 class="text-center">Dictionary project</h3>
-            <p class="text-center text-muted">
-              Built with HTML, CSS with React
-            </p>
+            <p class="text-center text-muted">WORK IN PROGRESS</p>
           </div>
           <div class="col-md-6 mb-4">
             <img src="images/translator.png" class="img-fluid" alt="" />
             <h3 class="text-center">Translator project</h3>
-            <p class="text-center text-muted">
-              Built with HTML, CSS with React
-            </p>
+            <p class="text-center text-muted">WORK IN PROGRESS</p>
           </div>
         </div>
       </div>
