--- a/index.html
+++ b/index.html
@@ -30,6 +30,28 @@
     <link rel="stylesheet" href="style/portfolio.css" />
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/">
+          <img src="images/icon.png" class="logo" alt="" />
+        </a>
+        <ul>
+          <li class="active">
+            <a href="/"> Home</a>
+          </li>
+          <li>
+            <a href="/about.html"> About</a>
+          </li>
+          <li>
+            <a href="/work.html"> Work</a>
+          </li>
+          <li>
+            <a href="/contact.html"> Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
     <div class="hero">
       <p>👋 Hi, I am</p>
       <h1>Maja Zemanová</h1>
