--- a/index.html
+++ b/index.html
@@ -103,6 +103,22 @@
           </div>
         </div>
       </div>
+      <footer>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto: majka.17p@gmail.com" class="email-link"
+            >majka.17p@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a
+            href="https://github.com/majo1ka"
+            target="_
+          "
+          >
+            <i class="fa-brands fa-github"></i>
+          </a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
