--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Contact me - Maja Zemanová</title>
 
     <script
       src="https://kit.fontawesome.com/4613d4fc01.js"
@@ -30,12 +30,44 @@
     <link rel="stylesheet" href="style/portfolio.css" />
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/" title="Homepage">
+          <img src="images/icon.png" class="logo" alt="" />
+        </a>
+        <ul>
+          <li>
+            <a href="/" title="Homepage"> Home</a>
+          </li>
+          <li>
+            <a href="/about.html" title="About me"> About</a>
+          </li>
+          <li>
+            <a href="/work.html" title="My work"> Work</a>
+          </li>
+          <li class="active">
+            <a href="/contact.html" title="Contact me"> Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Get in touch</h1>
         <h3>Email</h3>
         <a href="mailto:majka.17p@gmail.com">majka.17p@gmail.com</a>
       </div>
+      <footer>
+        <div class="social-links d-flex justify-content-center">
+          <a
+            href="https://github.com/majo1ka"
+            target="_
+          "
+          >
+            <i class="fa-brands fa-github"></i>
+          </a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
