--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Front-end developer - Maja Zemanová</title>
 
     <script
       src="https://kit.fontawesome.com/4613d4fc01.js"
@@ -32,21 +32,21 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/">
+        <a href="/" title="Homepage">
           <img src="images/icon.png" class="logo" alt="" />
         </a>
         <ul>
           <li class="active">
-            <a href="/"> Home</a>
+            <a href="/" title="Homepage"> Home</a>
           </li>
           <li>
-            <a href="/about.html"> About</a>
+            <a href="/about.html" title="About me"> About</a>
           </li>
           <li>
-            <a href="/work.html"> Work</a>
+            <a href="/work.html" title="My work"> Work</a>
           </li>
           <li>
-            <a href="/contact.html"> Contact</a>
+            <a href="/contact.html" title="Contact me"> Contact</a>
           </li>
         </ul>
       </nav>
@@ -57,7 +57,7 @@
       <h1>Maja Zemanová</h1>
       <h2 class="mb-5">Front-end developer based in Czechia</h2>
       <div>
-        <a href="#" class="btn btn-branding">Contact me </a>
+        <a href="/contact.html" class="btn btn-branding">Contact me </a>
       </div>
     </div>
     <p class="text-center m-5">Featured projects</p>
@@ -73,7 +73,7 @@
               My first project ever, featuring my favorite type of cat breeds -
               rexes.
             </p>
-            <a href="" class="btn btn-branding-outline">Learn more</a>
+            <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
       </div>
@@ -84,7 +84,7 @@
             <p class="mb-5 text-muted">
               First time using API and JavaScript - resulting in weather app
             </p>
-            <a href="" class="btn btn-branding-outline">Learn more</a>
+            <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
@@ -99,7 +99,7 @@
           <div class="project-desc">
             <h2 class="mb-5">Dictionary app</h2>
             <p class="mb-5 text-muted">To be added!</p>
-            <a href="" class="btn btn-branding-outline">Learn more</a>
+            <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
       </div>
