--- a/index.html
+++ b/index.html
@@ -118,6 +118,12 @@
             <i class="fa-brands fa-github"></i>
           </a>
         </div>
+        <p class="text-center mt-5">
+          This project is
+          <a href="https://github.com/majo1ka/portfolio-project" target="_blank"
+            >open-sourced</a
+          >
+        </p>
       </footer>
     </div>
   </body>
