added new content

--- a/work.html
+++ b/work.html
@@ -68,12 +68,12 @@
           <div class="col-md-6 mb-4">
             <img src="images/dictionary.png" class="img-fluid" alt="" />
             <h3 class="text-center">Dictionary project</h3>
-            <p class="text-center text-muted">WORK IN PROGRESS</p>
+            <p class="text-center text-muted">Built with HTML, CSS and React</p>
           </div>
           <div class="col-md-6 mb-4">
-            <img src="images/translator.png" class="img-fluid" alt="" />
-            <h3 class="text-center">Translator project</h3>
-            <p class="text-center text-muted">WORK IN PROGRESS</p>
+            <img src="images/weather2.png" class="img-fluid" alt="" />
+            <h3 class="text-center">Weather project 2.0</h3>
+            <p class="text-center text-muted">Built with HTML, CSS and React</p>
           </div>
         </div>
       </div>
