--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="hero">
       <p>👋 Hi, I am</p>
       <h1>Maja Zemanová</h1>
-      <h2 class="mb-5">Front-end developer based in Czechia</h2>
+      <h2 class="mb-5">Junior Front-end developer based in Czechia</h2>
       <div>
         <a href="/contact.html" class="btn btn-branding">Contact me </a>
       </div>
@@ -98,7 +98,7 @@
         <div class="col">
           <div class="project-desc">
             <h2 class="mb-5">Dictionary app</h2>
-            <p class="mb-5 text-muted">To be added!</p>
+            <p class="mb-5 text-muted">Dictionary using React and API!</p>
             <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
