--- a/about.html
+++ b/about.html
@@ -83,6 +83,13 @@
           >
             <i class="fa-brands fa-github"></i>
           </a>
+          <a
+            href="https://www.linkedin.com/in/maja-zemanova/"
+            target="_
+          "
+          >
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
         </div>
         <p class="text-center mt-5">
           This project is
